<resources>

    <string name="app_name">TTApp</string>
    <string name="confirm_button">Confirm</string>

    <!-- introduction page -->
    <string name="introduction_header">Welcome to the Touch&amp;Tell App</string>
    <string name="introduction_text">This is a cooperation between your company and Touch&amp;Tell. By answering questions regarding your work you will get the chance to have an impact on your work environment and workload. All your answers will be anonymous.</string>
    <string name="introduction_button">Continue</string>

    <!-- Registration -->
    <string name="enter_e_mail_here">Enter e-mail here…</string>
    <string name="enter_id">Registration</string>
    <string name="email_header">E-mail:</string>
    <string name="error_id_is_empty">Not valid: You need to enter your mail</string>
    <string name="error_id_not_found">Not valid: Mail is not registered</string>
    <string name="error_database">Could not connect to the database. Please restart the app and try again.</string>
    <string name="error_network">Could not connect to the internet. Please check your internet connection and try again.</string>
    <string name="session_expired_toast">Session expired, please try again</string>

    <!-- home page -->
    <string name="home_header">Home</string>
    <string name="home_start_survey_button">Start survey</string>
    <string name="home_settings_button">Settings</string>
    <string name="error_no_internet_connection">No internet connection</string>

    <!-- first question -->
    <string name="first_question">Do you like your job?</string>
    <string name="first_q_responseoption1">Yes</string>
    <string name="first_q_responseoption2">No</string>

    <!-- done with survey response -->
    <string name="done_with_survey_header">Great work!</string>
    <string name="done_with_survey_body">By taking your surveys, you and your colleagues contributes to a better work environment.</string>
    <string name="done_with_survey_button">Return home</string>

    <!-- yes no question -->
    <string name="yes_no_responseoption1">Yes</string>
    <string name="yes_no_responseoption2">No</string>

    <!-- smiley quartet question -->
    <string name="smileyq_responseoption1">Saddest</string>
    <string name="smileyq_responseoption2">Sad</string>
    <string name="smileyq_responseoption3">Happy</string>
    <string name="smileyq_responseoption4">Happiest</string>

    <!-- comment question -->
    <string name="comment_hinttext">Write your answer here…</string>

    <!-- comment smiley question -->
    <string name="comment_smiley_hinttext">Please explain why you chose this smiley…</string>

    <!-- NPS question -->
    <string name="nps_slider_label_right">Extremely</string>
    <string name="nps_slider_label_left">Not at all</string>

    <!-- short text question -->
    <string name="short_text_hinttext">Write your answer here…</string>

    <!-- number question -->
    <string name="number_hinttext">Enter number here…</string>

    <!-- email question -->
    <string name="email_hinttext">Enter e-mail here…</string>

    <!-- survey -->
    <string name="backbutton">back</string>
    <string name="nextbutton">next</string>
    <string name="submitbutton">submit</string>
    <string name="statistics">Statistics</string>
    <string name="start_survey">Start Survey</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="home">Home</string>
    <string name="button_comment_smiley">Comment</string>
    <string name="button_back_smiley">Back</string>
    <string name="log_out">Log Out</string>
    <string name="default_notification_channel_id">survey-channel</string>
    <string name="text_view_leave_survey">Your answers will not be saved if you leave. Do you want to send them now?</string>
    <string name="quit_without_saving">Quit without saving</string>
    <string name="quit_and_send">Quit and send</string>







</resources>