<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/textViewHomeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/home_header"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonStartSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewHomeHeader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/home_start_survey_button" />

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonStartSurvey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/home_settings_button" />

</RelativeLayout>